--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ColorPrimary">#FF8800</color>
-    <color name="ColorSecondary">#FF8243</color>
-    <color name="ColorAccent">#FFBD88</color>
+    <color name="colorPrimary">#FF8800</color>
+    <color name="colorSecondary">#FF8243</color>
+    <color name="colorAccent">#FFBD88</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
