--- a/app/src/main/res/menu/settings_action_menu.xml
+++ b/app/src/main/res/menu/settings_action_menu.xml
@@ -17,7 +17,7 @@
                 android:title="@string/s_menu_change_name"
                 app:showAsAction="never" />
             <item
-                android:id="@+id/exit"
+                android:id="@+id/s_btn_exit"
                 android:icon="@drawable/ic_exit"
                 android:title="@string/s_menu_exit"
                 app:showAsAction="never" />
