--- a/app/src/main/res/layout/fragment_enter_phone_num.xml
+++ b/app/src/main/res/layout/fragment_enter_phone_num.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.EnterPhoneNum">
+    tools:context="com.example.apptest.ui.fragments.EnterPhoneNum">
 
     <EditText
         android:id="@+id/register_input_number"
