--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/h_margin"
             android:layout_marginTop="@dimen/v_margin"
-            android:text="@string/s_def_name"
+            tools:text="@string/s_fullname"
             android:textColor="@color/white"
             android:textSize="@dimen/large_size"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,11 +41,12 @@
             app:layout_constraintTop_toTopOf="@id/s_profile_image" />
 
         <TextView
+            android:id="@+id/s_status"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/h_margin"
             android:layout_marginTop="@dimen/v_margin"
-            android:text="@string/s_def_online"
+            tools:text="@string/s_status"
             android:textColor="@color/white"
             android:textSize="@dimen/min_size"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,10 +76,10 @@
 
 
         <TextView
-            android:id="@+id/s_def_phone"
+            android:id="@+id/s_phoneNum"
             style="@style/s_normal_text"
             android:layout_marginTop="4dp"
-            android:text="@string/s_def_phone"
+            tools:text="@string/s_phoneNum"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/s_btn_change_phone" />
 
@@ -87,7 +88,7 @@
             style="@style/s_small_text"
             android:text="@string/s_change_phone_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/s_def_phone" />
+            app:layout_constraintTop_toBottomOf="@+id/s_phoneNum" />
 
         <View
             style="@style/seporator"
@@ -105,9 +106,9 @@
         app:layout_constraintTop_toBottomOf="@id/s_btn_change_phone">
 
         <TextView
-            android:id="@+id/s_def_name"
+            android:id="@+id/s_username"
             style="@style/s_normal_text"
-            android:text="@string/s_def_name_text"
+            tools:text="@string/s_username"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/s_btn_change_name" />
 
@@ -116,7 +117,7 @@
             style="@style/s_small_text"
             android:text="@string/s_change_name_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/s_def_name" />
+            app:layout_constraintTop_toBottomOf="@+id/s_username" />
 
         <View
             style="@style/seporator"
@@ -133,9 +134,9 @@
         app:layout_constraintTop_toBottomOf="@id/s_btn_change_name">
 
         <TextView
-            android:id="@+id/s_def_status"
+            android:id="@+id/s_bio"
             style="@style/s_normal_text"
-            android:text="@string/s_def_status"
+            tools:text="@string/s_bio"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/s_btn_change_status" />
 
@@ -144,7 +145,7 @@
             style="@style/s_small_text"
             android:text="@string/s_change_status"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/s_def_status" />
+            app:layout_constraintTop_toBottomOf="@+id/s_bio" />
 
         <View
             style="@style/seporator"
