--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -106,7 +106,7 @@
         app:layout_constraintTop_toBottomOf="@id/s_btn_change_phone">
 
         <TextView
-            android:id="@+id/s_username"
+            android:id="@+id/s_input_username"
             style="@style/s_normal_text"
             tools:text="@string/s_username"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +117,7 @@
             style="@style/s_small_text"
             android:text="@string/s_change_name_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/s_username" />
+            app:layout_constraintTop_toBottomOf="@+id/s_input_username" />
 
         <View
             style="@style/seporator"
