--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -162,8 +162,9 @@
         android:layout_height="@dimen/settings_user_photo_height"
         android:src="@drawable/ic_camera"
         android:layout_marginEnd="@dimen/h_margin"
-        app:civ_border_color="@color/gray"
-        app:civ_circle_background_color="@color/colorSecondary"
+        app:civ_border_color="@color/black"
+        android:elevation="2dp"
+        app:civ_circle_background_color="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_header_block" />
