--- a/app/src/main/res/layout/fragment_change_name.xml
+++ b/app/src/main/res/layout/fragment_change_name.xml
@@ -11,7 +11,7 @@
         style="@style/edit_reg_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Имя"
+        android:hint="@string/hint_change_name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         style="@style/edit_reg_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Фамилия"
+        android:hint="@string/hint_change_surname"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
