--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.apptest.ui.fragments.Chats">
+    tools:context="com.example.apptest.ui.fragments.Chats"
+    android:background="@color/colorAccent">
 
     <TextView
         android:layout_width="match_parent"
