--- a/app/src/main/res/layout/fragment_enter_code.xml
+++ b/app/src/main/res/layout/fragment_enter_code.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/h_l_margin"
-        android:contentDescription="@string/cd_reg_image"
+        android:contentDescription=""
         android:src="@drawable/notif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/v_margin"
         android:gravity="center"
-        android:text="@string/reg_text_enter_code"
+        android:text="@string/hint_enter_code"
         android:textColor="@color/black"
         android:textSize="@dimen/norm_size"
         android:textStyle="bold"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/v_margin"
         android:gravity="center"
-        android:text="@string/reg_sms_code"
+        android:text="@string/hint_send_enter_code"
         app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code">
     </TextView>
 
@@ -52,7 +52,7 @@
         android:autofillHints=""
         android:gravity="center"
         android:layout_width="wrap_content"
-        android:hint="— — — — — — "
+        android:hint="@string/hint_input_code"
         android:inputType="phone"
         android:maxLength="6"
         app:layout_constraintEnd_toEndOf="parent"
