--- a/app/src/main/res/layout/fragment_register_activity.xml
+++ b/app/src/main/res/layout/fragment_register_activity.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.apptest.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/registerToolBar"
+        android:id="@+id/register_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
@@ -17,12 +17,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/dataContainer"
+        android:id="@+id/data_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerToolBar"/>
+        app:layout_constraintTop_toBottomOf="@+id/register_toolbar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
