--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context="com.example.apptest.ui.fragments.Settings">
 
@@ -13,7 +14,6 @@
         android:layout_height="130dp"
         android:background="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -39,10 +39,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/s_profile_image"
             app:layout_constraintTop_toTopOf="@id/s_profile_image"
-            tools:text="@string/s_fullname" />
+            tools:text="Name Surname" />
 
         <TextView
-            android:id="@+id/s_status"
+            android:id="@+id/state"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/h_margin"
@@ -52,7 +52,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/s_profile_image"
             app:layout_constraintTop_toBottomOf="@id/s_full_name"
-            tools:text="@string/s_status" />
+            tools:text="Не сети" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -71,6 +71,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/s_btn_change_phone"
+        android:background="@color/white"
         style="@style/s_buttons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,15 +81,17 @@
         <TextView
             android:id="@+id/s_phoneNum"
             style="@style/s_normal_text"
+            android:background="@color/white"
+            android:textColor="@color/black"
             android:layout_marginTop="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/s_btn_change_phone"
-            tools:text="@string/s_phoneNum" />
+            tools:text="phoneNumber" />
 
         <TextView
             android:id="@+id/s_change_phone"
             style="@style/s_small_text"
-            android:text="@string/s_change_phone_text"
+            android:text="@string/s_hint_change_phone_number"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/s_phoneNum" />
 
@@ -102,6 +105,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/s_btn_change_name"
+        android:background="@color/white"
         style="@style/s_buttons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,14 +114,15 @@
         <TextView
             android:id="@+id/s_input_username"
             style="@style/s_normal_text"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/s_btn_change_name"
-            tools:text="@string/s_username" />
+            tools:text="username" />
 
         <TextView
             android:id="@+id/s_change_name"
             style="@style/s_small_text"
-            android:text="@string/s_change_name_text"
+            android:text="@string/s_hint_change_username"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/s_input_username" />
 
@@ -131,6 +136,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/s_btn_change_status"
         style="@style/s_buttons"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/s_btn_change_name">
@@ -138,14 +144,16 @@
         <TextView
             android:id="@+id/s_bio"
             style="@style/s_normal_text"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/s_btn_change_status"
-            tools:text="@string/s_bio" />
+            tools:text="bio" />
 
         <TextView
             android:id="@+id/s_change_status"
             style="@style/s_small_text"
-            android:text="@string/s_change_status"
+            android:layout_marginStart="16dp"
+            android:text="@string/s_hint_bio"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/s_bio" />
 
