--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF8800</color>colorPrimaryDark
-    <color name="colorPrimaryDark">#A9FF8800</color>
+    <color name="colorPrimary">#FF8800</color>
     <color name="colorSecondary">#FF8243</color>
     <color name="colorAccent">#FFBD88</color>
+    <color name="colorRecMessage">#1B1B1B</color>
     <color name="black">#FF000000</color>
+    <color name="nedoblack">#0E0E0E</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="nedowhite">#C1FFFFFF</color>
     <color name="gray">#656565</color>
 
 
