--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,8 @@
 <resources>
     <!--Настройки-->
     <!-- Фото профиля -->
-    <dimen name="s_profile_image_width">70dp</dimen>
-    <dimen name="s_profile_image_height">70dp</dimen>
+    <dimen name="s_profile_image_width">85dp</dimen>
+    <dimen name="s_profile_image_height">85dp</dimen>
 
     <dimen name="settings_user_photo_width">65dp</dimen>
     <dimen name="settings_user_photo_height">65dp</dimen>
@@ -25,7 +25,13 @@
     <dimen name="large_size">18sp</dimen>
     <!--Эффект клика-->
     <dimen name="s_ripply_effect_radius">5dp</dimen>
+
     <dimen name="Padding">10dp</dimen>
+    <dimen name="Padding_otprv">15dp</dimen>
+
     <dimen name="text_margin">16dp</dimen>
+
+    <dimen name="toolbar_image_W">45dp</dimen>
+    <dimen name="toolbar_image_H">45dp</dimen>
 
 </resources>
