--- a/app/src/main/res/layout/fragment_single_chat.xml
+++ b/app/src/main/res/layout/fragment_single_chat.xml
@@ -7,17 +7,23 @@
     android:background="@color/white"
     tools:context=".ui.fragments.single_chat.SingleChat">
 
-   <androidx.recyclerview.widget.RecyclerView
-        android:background="@color/nedowhite"
-        android:id="@+id/chat_recycle_view"
-        android:layout_width="match_parent"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/chat_swipe_refresh"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/chat_input_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/messgae_item" />
+        app:layout_constraintBottom_toTopOf="@+id/chat_input_message">
+        <androidx.recyclerview.widget.RecyclerView
+            android:background="@color/nedowhite"
+            android:id="@+id/chat_recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            tools:listitem="@layout/messgae_item" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
     <EditText
         android:id="@+id/chat_input_message"
