Рефакторинг кода Полная реализация "Голосовых сообщений" Оптимизация работы

--- a/app/src/main/res/layout/fragment_enter_code.xml
+++ b/app/src/main/res/layout/fragment_enter_code.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.apptest.ui.fragments.register.EnterCode">
+    tools:context="com.example.apptest.ui.screens.register.EnterCode">
 
     <ImageView
         android:id="@+id/reg_image"
