--- a/app/src/main/res/layout/fragment_change_username.xml
+++ b/app/src/main/res/layout/fragment_change_username.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.ChangeUsername">
+    tools:context=".ui.screens.ChangeUsername">
 
     <EditText
         android:id="@+id/s_input_username"
