--- a/app/src/main/res/layout/messgae_item_text.xml
+++ b/app/src/main/res/layout/messgae_item_text.xml
@@ -38,7 +38,14 @@
             style="@style/s_small_text"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chat_user_message"/>
+            app:layout_constraintTop_toBottomOf="@+id/chat_user_message"
+            android:shadowRadius="5"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowColor="@color/black"
+
+
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -74,69 +81,13 @@
             style="@style/s_small_text"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chat_reciver_message"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toBottomOf="@+id/chat_reciver_message"
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/block_reciver_image"
-        android:layout_width="@dimen/chat_image_w"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="@dimen/chat_image_h">
-
-        <ImageView
-            android:id="@+id/chat_reciver_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="TODO" />
-
-        <TextView
-            android:id="@+id/chat_reciver_image_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="21:45"
-            android:textColor="@color/white"
-            android:gravity="end"
-            style="@style/s_small_text"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/chat_reciver_image"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/block_user_image"
-        android:layout_width="@dimen/chat_image_w"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="@dimen/chat_image_h">
-
-        <ImageView
-            android:id="@+id/chat_user_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="TODO" />
-
-        <TextView
-            android:id="@+id/chat_user_image_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="21:45"
-            android:textColor="@color/white"
-            android:gravity="end"
-            style="@style/s_small_text"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/chat_user_image"/>
+            android:shadowRadius="5"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowColor="@color/black"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
